Fixed spacing and sizing

--- a/app/assets/stylesheets/pages/cards/cards.scss
+++ b/app/assets/stylesheets/pages/cards/cards.scss
@@ -11,10 +11,8 @@ $one-third: 100% / 3;
   .playing-field {
     position: relative;
     margin: 20px;
-    margin-top: 62px;
-    margin-left: 84px;
-    width: 1000px;
-    height: 500px;
+    width: 820px;
+    height: 600px;
     background: #246E20;
     padding: 20px;
     border-radius: 20px;
